templates/ingressl7-template.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: {acme-environment-name}
    nginx.ingress.kubernetes.io/use-regex: "true"
    ingress.kubernetes.io/rewrite-target: /
  name: nginx-ingress-server
  namespace: {mynamespace}
spec:
  tls:
  - hosts:
    - {ingresshostname}
    secretName: tls-secret
  rules:
    - host: {ingresshostname}
      http:
        paths:
          - backend:
              serviceName: myservice
              servicePort: 80
            path: /
